--- a/index.css
+++ b/index.css
@@ -1,141 +1,151 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:ital@1&display=swap');
-*{
-    margin:0;
-    padding:0;
+
+* {
+    margin: 0;
+    padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
 
 
-#header{
-    width:100%;
-    height:auto;
+#header {
+    width: 100%;
+    height: auto;
     background-color: rgba(7, 7, 87, 0.938);
     display: flex;
-    justify-content: end; 
-    list-style-type:none; 
-    float: right; 
-    padding-right:100px;
+    justify-content: end;
+    list-style-type: none;
+    float: right;
+    padding-right: 100px;
     padding-top: 12px;
     padding-bottom: 12px;
 }
 
-#header li{
+#header li {
     margin-left: 30px;
 }
-#header li a{
+
+#header li a {
     text-align: center;
-    color:white;
-    text-decoration: none;  
+    color: white;
+    text-decoration: none;
 }
 
-#header li img{
-    height:17px;
+#header li img {
+    height: 17px;
 }
 
-#header li a span{
+#header li a span {
     text-align: justify;
     font-size: 23px;
 }
 
 /* ============================Navbar======================================================================== */
-
-
-#manubar{
-    width:100%;
-    height:50px;
-    display: flex;
-    /* justify-content: center ; */
-    align-items: center;
-    padding:20px 10px 10px 12px;
-    background-image:url('https://pragetx.com/image/work-img9.png');
+#landing {
+    background-image: url('https://pragetx.com/image/work-img9.png');
     background-size: cover;
-    list-style: none;
-    
+    width: 100%;
+    height: 550px;
+    padding-top: 70px;
+    margin-bottom: 30px;
 }
 
-#manubar li a #icon-image{
-    width:80%;
+#manubar {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+/* #company_icon {
+    margin-right: 0%;
+} */
+
+#manubar li a #icon-image {
+    width: 80%;
     box-shadow: 0px 5px 10px 0px rgb(226, 126, 126);
 }
 
-#manubar li a{
-    margin:15px;
+#manubar li a {
+    margin: 10px;
     text-decoration: none;
 }
 
-#manubar li a:hover{
-    color:rgb(15, 116, 15);
+#manubar li a:hover {
+    color: rgb(15, 116, 15);
 }
 
-#get-touch-btn{
-    width:10%;
-    height:40px;
-    padding:10px ;
+#get-touch-btn {
+    width: 180px;
+    height: 35px;
+    text-align: center;
+    padding-top: 13px;
+    margin-left: 2%;
     background-color: rgb(22, 22, 90);
-    border-radius:25%;
-
-
+    border-radius: 30px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bolder;
+    border: 1px solid rgb(3, 3, 53);
 }
 
-#get-touch-btn a{
-    color:#fff;
-
+#get-touch-btn:hover {
+    background-color: #fff;
+    color: rgb(7, 7, 82);
 }
 
 /* ============= starting of dropdown-list for company manu============ */
 
-#company{
+#company {
     position: relative;
+    margin-left: 8%;
 }
 
-#company-dropdown-manu{
-    width:240px;
-    height:200px;
-    /* border: 1px solid red; */
+#company-dropdown-manu {
+    width: 240px;
+    height: 200px;
     background-color: #fff;
-    /* padding-top: 10px; */
     box-shadow: 10px 5px 20px 0px rgb(238, 116, 116);
     position: absolute;
-    top:20px;
-    /* left:-60px; */
+    top: 20px;
     display: none;
-    /* z-index: 1; */
     list-style: none;
 }
-#company-dropdown-manu li a{
+
+#company-dropdown-manu li a {
     text-decoration: none;
-    
+
 }
 
-#company-dropdown-manu li{
-    padding-bottom:10px;
+#company-dropdown-manu li {
+    padding-bottom: 10px;
     margin: 7px;
 }
 
-#company-dropdown-manu li:hover{
+#company-dropdown-manu li:hover {
     border-bottom: 2px solid rgb(32, 28, 28);
 
 }
 
-#company:hover #company-dropdown-manu{
-    display: block;   
+#company:hover #company-dropdown-manu {
+    display: block;
 }
 
 /* ============= starting of dropdown-list for Service manu============ */
 
 
-#services{
+#services {
     position: relative;
 }
 
-.service-dropdown-manu{
-    width:350px;
-    height:420px;
+.service-dropdown-manu {
+    width: 350px;
+    height: 420px;
     /* border: 1px solid red; */
-    list-style:none;
-    /* padding-top: 10px; */
+    list-style: none;
     position: absolute;
-    top:20px;
+    top: 20px;
     left: -90px;
     background-color: #fff;
     box-shadow: 10px 5px 20px 0px rgb(241, 113, 113);
@@ -143,56 +153,190 @@
 }
 
 .service-dropdown-manu li {
-    padding-bottom:10px;
+    padding-bottom: 10px;
     margin: 7px;
 
 }
 
-.service-dropdown-manu li a{
+.service-dropdown-manu li a {
     text-decoration: none;
 }
 
-.service-dropdown-manu li:hover{
+.service-dropdown-manu li:hover {
     border-bottom: 2px solid rgb(49, 42, 42);
 }
 
-#services:hover .service-dropdown-manu{
+#services:hover .service-dropdown-manu {
     display: block;
 }
 
 
 /* ============= starting of dropdown-list for hire developer manu============ */
 
-#hire-developer{
+#hire-developer {
     position: relative;
 }
 
-.hire-dropdown-manu{
+.hire-dropdown-manu {
     width: 320px;
     position: absolute;
-    top:20px;
+    top: 20px;
     /* border: 2px solid black; */
     list-style: none;
-    /* padding-top: 10px; */
     background-color: #fff;
     box-shadow: 10px 5px 20px 0px rgb(236, 131, 131);
     display: none;
 }
 
-.hire-dropdown-manu li{
+.hire-dropdown-manu li {
     padding-bottom: 10px;
     margin: 7px;
-
 }
 
-.hire-dropdown-manu li:hover{
-    border-bottom: 2px solid black;  
+.hire-dropdown-manu li:hover {
+    border-bottom: 2px solid black;
 }
 
-.hire-dropdown-manu li a{
+.hire-dropdown-manu li a {
     text-decoration: none;
 }
 
-#hire-developer:hover .hire-dropdown-manu{
+#hire-developer:hover .hire-dropdown-manu {
     display: block;
+}
+
+#Careers a {
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#wave_circle {
+    width: 10px;
+    height: 10px;
+    border: 2px solid black;
+    border-radius: 50%;
+    /* z-index: 10; */
+}
+
+/* #wave_circle::after{
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 5px solid black;
+    position: relative;
+    animation: wave 2s infinite;
+} 
+@keyframes wave{
+    0%{width:10px;height: 10px; position:relative;}
+    30%{width:20px;height: 20px;position:relative;}
+    60%{width:30px;height: 30px;position:relative;}
+    100%{width:40px;height: 40px;position:relative;}
+}
+*/
+/* ================================ Landing part -1 =============================== */
+
+ #land_part_1 {
+    width: 100%;
+    height: 370px;
+    /* border: 1px solid black ; */
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    /* display: none; */
+
+}
+
+#part1_heading-1,
+#part1_heading-2 {
+    font-size: 50px;
+    font-weight: bolder;
+    text-align: center;
+    margin-top: 5px;
+
+}
+
+#part1_heading-3 {
+    text-align: center;
+    margin-top: 25px;
+    font-weight: bold;
+    line-height: 25px;
+}
+
+#part1_button {
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: bolder;
+    background-color: rgb(8, 8, 91);
+    color: #fff;
+    border-radius: 25px;
+    margin-left: 45%;
+    margin-top: 35px;
+    border: 1px solid rgb(6, 6, 60);
+}
+#part1_button:hover{
+    background-color: rgb(246, 246, 250);
+    color: #07074d;
+} 
+
+/* ============================= Landing part -2 ================================== */
+
+#part2_box{
+    width: 100%;
+    height:150px;
+    overflow: hidden;
+}
+#part2_slider{
+    width: 200%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3ebeb;
+    position: relative;
+    left: 0%;
+    top: 0px;
+    animation: slider2 25s infinite;
+}
+@keyframes slider2{
+    0%{left:0%; top:0px;}
+    10%{left:-10%; top:0px; translate:smooth;}
+    20%{left:-20%; top:0px;}
+    30%{left:-30%; top:0px;}
+    40%{left:-40%; top:0px;}
+    50%{left:-50%; top:0px;}
+    60%{left:-60%; top:0px;}
+    70%{left:-70%; top:0px;}
+    80%{left:-80%; top:0px;}
+    90%{left:-90%; top:0px;}
+    100%{left:-100%; top:0px;}
+}
+#part2_slider img{
+    width:75px;
+    margin-left: 28px;
+}
+
+/* ============================== Landing part-3 =============================== */
+
+#part3_box{
+    width: 100%;
+    height: 300px;
+    /* border: 1px solid black; */
+    margin-top: 70px;
+    text-align: center;
+    padding-top: 80px;
+    /* background-color: aquamarine; */
+}
+#part3_heading{
+    color:black;
+    font-size: 40px;
+    font-weight: bolder;
+    margin-bottom: 15px;
+}
+#part3_peragraph{
+ font-size: 18px;
+ font-weight: 900;
 }
